# test_da

./: .gitignore  Dockerfile.local  README.md  alembic.ini  cli.py  docker-compose.yml  pyproject.toml  start-local.sh  wait-for-it.sh
migrations/: env.py
migrations/versions/: 38b12ea9b2da_init.py  54b3dfbe989d_init_migr.py
src/: config.py  db.py  deps.py  exceptions.py  main.py
src/admin/: auth.py  exceptions.py
src/admin/views/: item.py  user.py
src/api/: api.py  exceptions.py
src/api/routers/: item.py
src/core/schemas/: base.py
src/models/: __init__.py  common.py  item.py  models.py  user.py
tests/: conftest.py  test_items.py  test_users.py
tests/fixtures/: client.py  db.py
